--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -3,5 +3,10 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 spring.datasource.driver-class-name=org.h2.Driver
 
+security.ignored=/**
+spring.security.enabled=false
+management.security.enabled=false
+security.basic.enabled=false
+
 
 
